--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   </head>
   <body>
     <h1>Mijn favoriete games ever!</h1>
+    <ul class="list-group">
+        <li class="list-group-item">Counter strike global offensive</li>
+        
+      </ul>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
