--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h1>Mijn favoriete games ever!</h1>
     <ul class="list-group">
         <li class="list-group-item">Counter strike global offensive</li>
+        <li class="list-group-item">Warframe</li>
         
       </ul>
 
