--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <ul class="list-group">
         <li class="list-group-item">Counter strike global offensive</li>
         <li class="list-group-item">Warframe</li>
-        <li class="list-group-item">Rainbow six siege</li>        
+        <li class="list-group-item">Rainbow six siege</li>   
+        <li class="list-group-item">Rocket league</li>     
       </ul>
 
     <!-- Optional JavaScript -->
