--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <li class="list-group-item">Counter strike global offensive</li>
         <li class="list-group-item">Warframe</li>
         <li class="list-group-item">Rainbow six siege</li>   
-        <li class="list-group-item">Rocket league</li>     
+        <li class="list-group-item">Rocket league</li>   
+        <li class="list-group-item">Papers Please</li>   
       </ul>
 
     <!-- Optional JavaScript -->
