--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <li class="list-group-item">Warframe</li>
         <li class="list-group-item">Rainbow six siege</li>   
         <li class="list-group-item">Rocket league</li>   
-        <li class="list-group-item">Papers Please</li>   
+        <li class="list-group-item">Papers Please</li>  
+        <li class="list-group-item">Osu!</li>  
       </ul>
 
     <!-- Optional JavaScript -->
