--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <li class="list-group-item">Rainbow six siege</li>   
         <li class="list-group-item">Rocket league</li>   
         <li class="list-group-item">Papers Please</li>  
-        <li class="list-group-item">Osu!</li>  
+        <li class="list-group-item">Osu!</li>
+        <li class="list-group-item">Grand Theft Auto 5</li>   
       </ul>
 
     <!-- Optional JavaScript -->
