--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li class="list-group-item">Papers Please</li>  
         <li class="list-group-item">Osu!</li>
         <li class="list-group-item">Grand Theft Auto 5</li>   
+        <li class="list-group-item">Minecraft</li> 
       </ul>
 
     <!-- Optional JavaScript -->
