--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li class="list-group-item">Osu!</li>
         <li class="list-group-item">Grand Theft Auto 5</li>   
         <li class="list-group-item">Minecraft</li> 
+        <li class="list-group-item">Call of Duty Black ops 1</li> 
       </ul>
 
     <!-- Optional JavaScript -->
