--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li class="list-group-item">Grand Theft Auto 5</li>   
         <li class="list-group-item">Minecraft</li> 
         <li class="list-group-item">Call of Duty Black ops 1</li> 
+        <li class="list-group-item">Payday 2</li> 
       </ul>
 
     <!-- Optional JavaScript -->
