--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li class="list-group-item">Minecraft</li> 
         <li class="list-group-item">Call of Duty Black ops 1</li> 
         <li class="list-group-item">Payday 2</li> 
+        <li class="list-group-item">Life simulator</li> 
       </ul>
 
     <!-- Optional JavaScript -->
